--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -5,7 +5,9 @@ body {
   word-wrap: break-word;
   overflow-x: hidden;
 }
-dl, ol, ul {
+dl,
+ol,
+ul {
   margin-top: 0;
   margin-bottom: 25px;
 }
@@ -25,15 +27,15 @@ ul {
     font-weight: 500;
     margin-bottom: 10px;
   }
-  input[type="password"] {
+  input[type='password'] {
     font-size: 1.2rem;
     line-height: 20px;
     padding: 12px 20px;
-    border: 1px solid #E4E4F2;
+    border: 1px solid #e4e4f2;
     width: 100%;
   }
-  input[type="submit"] {
-    background-color: $primary-color ;
+  input[type='submit'] {
+    background-color: $primary-color;
     border: none;
     padding: 10px 40px;
     color: $white;
@@ -46,7 +48,7 @@ ul {
     }
   }
 }
-.textwidget p >strong {
+.textwidget p > strong {
   color: $black;
 }
 /* Table */
@@ -61,12 +63,12 @@ table {
     color: $text-color;
   }
   th,
-  td{
+  td {
     background-color: transparent;
     border: 1px solid #dfe2e9;
     text-align: center;
     padding: 8px;
-    transition: .3s;
+    transition: 0.3s;
     color: $text-color;
 
     &#today {
@@ -89,7 +91,9 @@ table {
     margin-top: 40px;
   }
 
-  dl, ol, ul {
+  dl,
+  ol,
+  ul {
     margin-bottom: 11px;
   }
   .comment-respond {
@@ -106,13 +110,12 @@ table {
   }
 }
 
-.post-comments-form a{
-  color: #23262D;
-  &:hover{
-    color: #D9A14C;
+.post-comments-form a {
+  color: #23262d;
+  &:hover {
+    color: #d9a14c;
   }
 }
-
 
 /* Text meant only for screen readers. */
 .screen-reader-text {
@@ -145,7 +148,6 @@ table {
   z-index: 100000;
 }
 
-
 /*
  Caption
 ============================*/
@@ -154,7 +156,7 @@ table {
   max-width: 100%;
 }
 
-.wp-caption img[class*="wp-image-"] {
+.wp-caption img[class*='wp-image-'] {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -287,13 +289,13 @@ img {
   }
 }
 blockquote {
-  overflow:hidden;
+  overflow: hidden;
   //padding: 30px 30px 30px 30px !important;
   margin: 40px 0;
   position: relative;
   z-index: 1;
   padding: 40px 60px !important;
-  @include sm{
+  @include sm {
     padding: 30px !important;
   }
   //background-color: $white;
@@ -337,38 +339,41 @@ blockquote {
 }
 .wp-block-group.has-background,
 .wp-block-columns.has-background,
-.wp-block-columns .has-background
-{
+.wp-block-columns .has-background {
   p {
     color: $secondary-color;
   }
 }
 
-.wp-block-quote, blockquote {
+.wp-block-quote,
+blockquote {
   border-left: 2px solid $primary-color;
 }
 .wp-block-pullquote {
   border-top: 2px solid $primary-color !important;
   border-bottom: 2px solid $primary-color !important;
   background-color: #f4f4f4;
-  &.is-style-solid-color{
+  &.is-style-solid-color {
     background-color: $gray-100 !important;
-    .blockquote{
+    .blockquote {
       background-color: $white;
     }
   }
 }
-.wp-block-quote__citation, .wp-block-quote cite, .wp-block-quote footer {
+.wp-block-quote__citation,
+.wp-block-quote cite,
+.wp-block-quote footer {
   margin-top: 10px;
   display: block;
 }
-.wp-block-column:not(:first-child), .wp-block-column:nth-child(2n) {
+.wp-block-column:not(:first-child),
+.wp-block-column:nth-child(2n) {
   margin-left: 10px;
 }
 .wp-block-column:not(:last-child) {
   margin-right: 10px;
 }
-.wp-block-column:nth-child(2n+1) {
+.wp-block-column:nth-child(2n + 1) {
   margin-right: 10px;
 }
 .post-content > .alignwide {
@@ -447,8 +452,7 @@ blockquote {
 .widget.widget_text select,
 .widget.widget_search .search-form,
 .widget.widget_tag_cloud .tagcloud,
-.widget .wp-block-tag-cloud
-{
+.widget .wp-block-tag-cloud {
   margin-bottom: 6px;
 }
 .wp-block-latest-posts {
@@ -465,85 +469,85 @@ nav.wp-calendar-nav {
     color: $text-color;
 
     &:hover {
-      color: $primary-color
+      color: $primary-color;
     }
   }
 }
 
-  .blog-search-content .search-form input {
-    width: 50%;
-    border: 1px solid $border-color;
+.blog-search-content .search-form input {
+  width: 50%;
+  border: 1px solid $border-color;
 
-    @include rmaxwd(991) {
-      width: 100%;
-    }
-  }
-  /* Search Widget */
-  .search-form {
-    display: flex !important;
-
-    button {
-      width: 62px;
-      flex-shrink: 0;
-    }
-  }
-  //.wp-block-search__no-button {
-  //  &.wp-block-search {
-  //    input {
-  //      border-radius: 6px;
-  //    }
-  //  }
-  //}
-
-  .wp-block-search {
-    margin-bottom: -2px;
-  }
-  .wp-block-search,
-  .search-form {
-    display: inline-block;
+  @include rmaxwd(991) {
     width: 100%;
-    overflow: hidden;
-    gap: 10px;
-
-    .wp-block-search__inside-wrapper {
-      display: flex;
-      padding: 0 !important;
-    }
-    label {
-      font-size: 24px;
-      display: block;
-      line-height: 28px;
-      font-weight: 500;
-      margin-bottom: 30px;
-      color: $secondary-color;
-      font-family: $heading-font;
-    }
-    input {
-      //background-color: $white;
-      //border: 1px solid $border-color;
-      padding: 0 25px;
-      height: 60px;
-      width: 100%;
-      color: $black;
-      font-size: 18px;
-      //border-radius: 6px 0 0 6px;
-    }
-    button {
-      color: $white;
-      padding: 0 20px;
-      position: relative;
-      right: 0;
-      background-color: $primary-color;
-      top: 0;
-      height: auto;
-      //border-radius: 0 6px 6px 0;
-      line-height: 0;
-      border: 0;
-      margin-left: 0 !important;
-    }
   }
+}
+/* Search Widget */
+.search-form {
+  display: flex !important;
 
-  /*
+  button {
+    width: 62px;
+    flex-shrink: 0;
+  }
+}
+//.wp-block-search__no-button {
+//  &.wp-block-search {
+//    input {
+//      border-radius: 6px;
+//    }
+//  }
+//}
+
+.wp-block-search {
+  margin-bottom: -2px;
+}
+.wp-block-search,
+.search-form {
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  gap: 10px;
+
+  .wp-block-search__inside-wrapper {
+    display: flex;
+    padding: 0 !important;
+  }
+  label {
+    font-size: 24px;
+    display: block;
+    line-height: 28px;
+    font-weight: 500;
+    margin-bottom: 30px;
+    color: $secondary-color;
+    font-family: $heading-font;
+  }
+  input {
+    //background-color: $white;
+    //border: 1px solid $border-color;
+    padding: 0 25px;
+    height: 60px;
+    width: 100%;
+    color: $black;
+    font-size: 18px;
+    //border-radius: 6px 0 0 6px;
+  }
+  button {
+    color: $white;
+    padding: 0 20px;
+    position: relative;
+    right: 0;
+    background-color: $primary-color;
+    top: 0;
+    height: auto;
+    //border-radius: 0 6px 6px 0;
+    line-height: 0;
+    border: 0;
+    margin-left: 0 !important;
+  }
+}
+
+/*
    Media
   ============================*/
 .page-content .wp-smiley,
@@ -573,7 +577,6 @@ figure.wp-block-embed {
     }
   }
   .wpcf7-form {
-
     // Validation Error Message
     .wpcf7-not-valid {
       border-color: #dc3232 !important;
@@ -590,14 +593,13 @@ figure.wp-block-embed {
         font-size: 16px;
         line-height: 21px;
         letter-spacing: -0.01em;
-        color: #72DC60;
+        color: #72dc60;
         padding: 15px 20px;
         text-align: center;
         position: relative;
-        background: #F4FFF5;
-        border: 1px solid #CDF5C8 !important;
+        background: #f4fff5;
+        border: 1px solid #cdf5c8 !important;
         border-radius: 10px;
-
       }
     }
     &.invalid {
@@ -610,25 +612,24 @@ figure.wp-block-embed {
         padding: 15px 20px;
         text-align: center;
         position: relative;
-        background: #FFF7F7;
-        border: 1px solid #FED8D8 !important;
+        background: #fff7f7;
+        border: 1px solid #fed8d8 !important;
         border-radius: 10px;
       }
     }
   }
 }
 // Global Checkbox & Radio Style
-input[type="checkbox"],
-input[type="radio"]
-{
+input[type='checkbox'],
+input[type='radio'] {
   -webkit-appearance: none;
   appearance: none;
   margin: 0;
-  width: 22px !important;
-  height: 22px !important;
-  border-color: #e3e4e5;
-  border-radius: 6px !important;
-  background-color: #e3e4e5 !important;
+  width: 15px !important;
+  height: 15px !important;
+  border: 2px solid $primary-color;
+  border-radius: 4px !important;
+  background-color: transparent !important;
   transform: scale(1);
   transition: 0.3s;
   position: relative !important;
@@ -641,11 +642,9 @@ input[type="radio"]
   box-shadow: none !important;
 }
 
-
-input[type="radio"]::before
-{
+input[type='radio']::before {
   position: absolute;
-  content: "";
+  content: '';
   height: 8px;
   width: 8px;
   transition: 0.3s;
@@ -657,9 +656,9 @@ input[type="radio"]::before
   right: 0;
   margin: auto;
 }
-input[type="checkbox"]::before{
+input[type='checkbox']::before {
   position: absolute;
-  content: "";
+  content: '';
   background-image: url("data:image/svg+xml,%3Csvg width='9' height='8' viewBox='0 0 9 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.44899 7.76355C3.36328 7.84971 3.24641 7.89784 3.12495 7.89784C3.00349 7.89784 2.88662 7.84971 2.80091 7.76355L0.213156 5.17534C-0.0554271 4.90676 -0.0554271 4.47134 0.213156 4.20321L0.537198 3.87917C0.805781 3.61059 1.24074 3.61059 1.50932 3.87917L3.12495 5.4948L7.49057 1.12917C7.75916 0.860589 8.19457 0.860589 8.4627 1.12917L8.78674 1.45321C9.05532 1.7218 9.05532 2.15721 8.78674 2.42534L3.44899 7.76355Z' fill='white'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center center;
@@ -675,15 +674,13 @@ input[type="checkbox"]::before{
   right: 0;
   margin: auto;
 }
-input[type="checkbox"]:checked::before,
-input[type="radio"]:checked::before
-{
+input[type='checkbox']:checked::before,
+input[type='radio']:checked::before {
   transform: scale(1);
-  box-sizing:inherit !important;
+  box-sizing: inherit !important;
 }
-input[type="checkbox"]:checked,
-input[type="radio"]:checked
-{
+input[type='checkbox']:checked,
+input[type='radio']:checked {
   border-color: $primary-color !important;
 }
 
@@ -717,13 +714,13 @@ input[type="radio"]:checked
 }
 // Zoom Instagram Widget
 .zoom-instagram-widget {
- p {
-   color: $white;
+  p {
+    color: $white;
 
-   a {
-     color: $primary-color;
-   }
- }
+    a {
+      color: $primary-color;
+    }
+  }
   ul {
     list-style: none;
     li {
@@ -731,7 +728,6 @@ input[type="radio"]:checked
     }
   }
 }
-
 
 /* Recent Comment List Block Widget & Latest Post Widget Block */
 .has-avatars.has-dates.has-excerpts.wp-block-latest-comments,
@@ -768,7 +764,7 @@ input[type="radio"]:checked
         color: $text-color;
 
         &:before {
-          content: "\f274";
+          content: '\f274';
           font-family: $font-awesome;
           padding-right: 8px;
         }
@@ -797,7 +793,7 @@ input[type="radio"]:checked
     }
   }
 }
-  // When Admin Logged In
+// When Admin Logged In
 body {
   &.admin-bar {
     .header-menu-area.sticky_menu {
@@ -931,21 +927,17 @@ body {
   }
 }
 
-
 .wp-block-rss,
 .wp-block-page-list,
 .wp-block-categories-list.wp-block-categories,
-ul, ol
-{
+ul,
+ol {
   li {
-    a{
+    a {
       color: #616670;
-      &:hover{
-        color: #D9A14C;
+      &:hover {
+        color: #d9a14c;
       }
     }
   }
 }
-
-
-
