--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -852,226 +852,14 @@
   }
 }
 
-// Portfolio Section
-.portfolio-section {
-  &.style-1 {
-    padding: 120px 0;
-
-    @include md {
-      padding: 100px 0;
-    }
-
-    @include sm {
-      padding: 80px 0;
-    }
-
-    .section-title {
-      margin-bottom: 54px;
-
-      @include sm {
-        margin-bottom: 30px;
-        gap: 20px;
-        flex-wrap: wrap;
-      }
-      .title {
-        margin-bottom: 0;
-      }
-      .sec-desc {
-        margin-right: 10px;
-        margin-bottom: 10px;
-      }
-    }
+// Footer
+.footer {
+  .subscribe-form-wrapper {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
   }
-}
-
-// Counter Up Area
-.counter-up-area {
-  &.style-1 {
-    margin: 0 80px;
-
-    @include md {
-      padding: 40px;
-      margin: 0 40px;
-    }
-
-    @include sm {
-      margin: 0 20px;
-      padding: 40px;
-    }
-
-    .counter-item {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      padding: 0 107px;
-      height: 100%;
-      @include xl {
-        padding: 0;
-      }
-      @include lg {
-        padding: 0;
-      }
-      @include md {
-        grid-template-columns: repeat(2, 1fr);
-        padding: 40px;
-        grid-gap: 40px;
-      }
-
-      @include sm {
-        grid-template-columns: repeat(2, 1fr);
-        padding: 40px;
-        grid-gap: 40px;
-      }
-
-      @include xs {
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 0;
-      }
-    }
-  }
-}
-
-.video-popup-area {
-  &.style-1 {
-    margin: 0 80px;
-
-    @include sm {
-      margin: 0 20px;
-    }
-    @include md {
-      margin: 0 40px;
-    }
-  }
-}
-
-.testimonial-slider-area {
-  &.style-1 {
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
-    overflow: hidden;
-    padding-top: 120px;
-    padding-bottom: 100px;
-
-    @include md {
-      padding: 100px 0;
-    }
-
-    @include sm {
-      padding: 80px 0;
-      gap: 80px;
-    }
-
-    .section-title {
-      .title {
-        margin-bottom: 0;
-      }
-
-      .slider-nav-btn-wrapper {
-        margin-top: 50px;
-        @include rmaxwd(991) {
-          margin-top: 30px;
-        }
-        a {
-          filter: drop-shadow(0px 6px 50px rgba(37, 37, 37, 0.05));
-          box-shadow: none;
-          width: 60px;
-          height: 60px;
-          font-size: 17px;
-          background-color: rgba(217, 161, 76, 0.1);
-          color: $primary-color;
-          @include transition;
-
-          &:hover {
-            background-color: $primary-color;
-            color: $white;
-            @include transition;
-          }
-        }
-      }
-    }
-  }
-}
-
-// latest-posts-area
-.latest-posts-area {
-  &.style-1 {
-    padding-top: 120px;
-    padding-bottom: 120px;
-    @include sm {
-      padding: 80px 0;
-    }
-
-    @include md {
-      padding: 100px 0;
-    }
-
-    .post_card_slider_wrapper {
-      margin-left: 15px;
-      margin-top: -4px;
-    }
-
-    .section-title {
-      margin-bottom: 60px;
-      @include sm {
-        gap: 20px;
-        flex-wrap: wrap;
-      }
-      .title {
-        margin-bottom: 0;
-      }
-
-      .slider-nav-btn-wrapper {
-        a {
-          filter: drop-shadow(0px 6px 50px rgba(37, 37, 37, 0.05));
-          box-shadow: none;
-          width: 60px;
-          height: 60px;
-          font-size: 17px;
-          background-color: rgba(217, 161, 76, 0.1);
-          color: $primary-color;
-          @include transition;
-
-          &:hover {
-            background-color: $primary-color;
-            color: $white;
-            @include transition;
-          }
-        }
-      }
-    }
-  }
-}
-
-.post-card-slider-wrapper {
-  .slick-arrow {
-    display: none !important;
-  }
-
-  .slick-list.draggable {
-    margin: 0 -15px;
-    @include sm {
-      margin: 0;
-    }
-  }
-}
-
-.contact-form-area {
-  &.style-1 {
-    padding-bottom: 120px;
-    @include sm {
-      padding-top: 0;
-      padding-bottom: 80px;
-
-      .sub-title {
-        margin-bottom: 0;
-      }
-    }
-    @include md {
-      padding-top: 0;
-      padding-bottom: 100px;
-      .sub-title {
-        margin-bottom: 0;
-      }
-    }
+  .bottom-image {
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
 }
