--- a/sass/modules/blog-card/_blog-card.scss
+++ b/sass/modules/blog-card/_blog-card.scss
@@ -2,6 +2,12 @@
   position: relative;
   overflow: hidden;
   &:hover {
+    .image-wrapper {
+      .overlay {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
     .content-wrapper {
       .title-wrapper {
         @include transition;
@@ -13,6 +19,20 @@
         margin-top: 16px;
         @include transition;
       }
+    }
+  }
+  .image-wrapper {
+    position: relative;
+    .overlay {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: rgba(49, 43, 43, 0.7);
+      visibility: hidden;
+      opacity: 0;
+      @include transition;
     }
   }
   .content-wrapper {
