--- a/css/style.css
+++ b/css/style.css
@@ -34990,6 +34990,11 @@ body.admin-bar .header-area.style-7 {
   overflow: hidden;
   padding-top: 238px;
 }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .slider-area .single-slider {
+    padding-top: 10%;
+  }
+}
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .slider-area .single-slider {
     padding-top: 80px;
@@ -35218,17 +35223,55 @@ body.admin-bar .header-area.style-7 {
   top: 50%;
   transform: translateY(-50%);
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .slider-area .single-slider .slider-image {
-    animation: none;
-    right: unset;
-    text-align: center;
-  }
-}
 @media (max-width: 1799px) {
   .slider-area .single-slider .slider-image {
     width: auto;
     margin-top: inherit;
+    right: 20%;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .slider-area .single-slider .slider-image {
+    right: 10%;
+  }
+}
+@media (max-width: 1199px) {
+  .slider-area .single-slider .slider-image {
+    height: 450px;
+    right: unset;
+  }
+  .slider-area .single-slider .slider-image .slider-image-inner {
+    width: 100%;
+    height: 300px;
+  }
+  .slider-area .single-slider .slider-image .slider-image-inner img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 991px) {
+  .slider-area .single-slider .slider-image {
+    height: 200px;
+  }
+}
+@media (max-width: 767px) {
+  .slider-area .single-slider .slider-image {
+    height: 180px;
+    right: unset;
+    text-align: center;
+  }
+  .slider-area .single-slider .slider-image .slider-image-inner {
+    width: 60px;
+    height: 40px;
+  }
+}
+@media (max-width: 575px) {
+  .slider-area .single-slider .slider-image {
+    height: 150px;
+  }
+  .slider-area .single-slider .slider-image .slider-image-inner {
+    width: 50px;
+    height: 35px;
   }
 }
 .slider-area .slider-wrapper .slick-active .slider-short-title,
@@ -35291,12 +35334,17 @@ body.admin-bar .header-area.style-7 {
   gap: 30px;
   flex-direction: column;
   position: absolute;
-  top: 346px;
+  top: 50%;
   right: 178px;
   transform: translateY(-50%);
   z-index: 2;
   flex-direction: column;
   margin-bottom: 0;
+}
+@media (max-width: 1800px) {
+  .slider-area .slider-wrapper .slick-dots {
+    right: 5%;
+  }
 }
 @media (max-width: 1199px) {
   .slider-area .slider-wrapper .slick-dots {
@@ -35310,6 +35358,33 @@ body.admin-bar .header-area.style-7 {
     right: unset;
     transform: none;
     padding: 0;
+  }
+}
+@media (max-width: 991px) {
+  .slider-area .slider-wrapper .slick-dots {
+    gap: 20px;
+    bottom: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .slider-area .slider-wrapper .slick-dots {
+    gap: 15px;
+    bottom: 60px;
+    top: unset;
+    left: 50%;
+    right: unset;
+    transform: translateX(-50%);
+  }
+}
+@media (max-width: 575px) {
+  .slider-area .slider-wrapper .slick-dots {
+    gap: 10px;
+    bottom: 40px;
+    flex-direction: row;
+    position: static;
+    left: 0;
+    right: 0;
+    justify-content: center;
   }
 }
 .slider-area .slider-wrapper .slick-dots li {
